--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image:url(http://mv-1251266784.file.myqcloud.com/b.jpg);
+	background-image:url(http://mv-1251266784.file.myqcloud.com/c.jpg);
 	width:100%;
 	height:100%;
 	background-size:100% ;
